--- a/package.json
+++ b/package.json
@@ -17,17 +17,23 @@
   "dependencies": {
     "@astrojs/check": "^0.9.4",
     "@astrojs/mdx": "^4.2.3",
+    "@astrojs/react": "^4.2.3",
     "@astrojs/sitemap": "^3.3.0",
     "@astrojs/starlight": "^0.32.5",
     "@tailwindcss/vite": "^4.1.3",
+    "@types/react": "^19.1.0",
+    "@types/react-dom": "^19.1.2",
     "astro": "^5.6.1",
     "astro-compressor": "^1.0.0",
     "clipboard": "^2.0.11",
+    "framer-motion": "^12.6.3",
     "globby": "^14.1.0",
     "gsap": "^3.12.7",
     "html-minifier-terser": "^7.2.0",
     "lenis": "^1.2.3",
     "preline": "^3.0.1",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
     "rimraf": "^6.0.1",
     "sharp": "^0.34.0",
     "sharp-ico": "^0.1.5",
