--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "screwfast-template",
+  "name": "mstudio-template",
   "type": "module",
   "version": "0.0.1",
   "scripts": {
@@ -37,10 +37,12 @@
     "rimraf": "^6.0.1",
     "sharp": "^0.34.0",
     "sharp-ico": "^0.1.5",
-    "tailwindcss": "^4.1.3"
+    "tailwindcss": "^4.1.3",
+    "three": "^0.175.0"
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.10",
+    "@types/three": "^0.175.0",
     "@typescript-eslint/eslint-plugin": "^7.3.1",
     "@typescript-eslint/parser": "^7.3.1",
     "astro-vtbot": "^2.1.2",
